--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/google-spreadsheet": "^3.3.2",
     "@types/passport-jwt": "^3.0.8",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^8.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "google-spreadsheet": "^3.3.0",
     "moment-timezone": "^0.5.43",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
