--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "slugify": "^1.6.6",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
