--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^8.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "google-spreadsheet": "^3.3.0",
@@ -45,7 +46,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "slugify": "^1.6.6",
-    "typeorm": "^0.3.16"
+    "typeorm": "^0.3.16",
+    "youtube-search-without-api-key": "^1.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
