--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^2.0.0",
+    "@nestjs/cache-manager": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.3",
     "@nestjs/core": "^9.0.0",
@@ -36,6 +37,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^8.4.0",
+    "cache-manager": "^5.2.3",
     "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
