--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "rxjs": "^7.2.0",
     "slugify": "^1.6.6",
     "typeorm": "^0.3.16",
-    "youtube-search-without-api-key": "^1.1.0"
+    "youtube-search-without-api-key": "1.0.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
