update env example

--- a/.example.env
+++ b/.example.env
@@ -1,6 +1,13 @@
-DB_NAME=database/chat-bot.db
+DB_NAME=
 MESSENGER_VERIFY_TOKEN=
 GOOGLE_SHEET_PRIVATE_KEY=
 GOOGLE_SHEET_ID=
 GOOGLE_SHEET_ID_1=
 GOOGLE_SHEET_CLIENT_EMAIL=
+JWT_ACCESS_TOKEN_SECRET=
+JWT_ACCESS_TOKEN_EXPIRATION_TIME=
+JWT_REFRESH_TOKEN_SECRET=
+JWT_REFRESH_TOKEN_EXPIRATION_TIME=
+MESSENGER_PAGE_ID=
+FAN_PAGE_URL=
+BACKUP_IMAGE_URL=
