--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "class-validator": "^0.14.0",
     "google-spreadsheet": "^3.3.0",
     "moment-timezone": "^0.5.43",
+    "nestjs-telegraf": "^2.7.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "slugify": "^1.6.6",
+    "telegraf": "^4.12.2",
     "typeorm": "^0.3.16",
     "youtube-search-without-api-key": "1.0.7"
   },
