--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/google-spreadsheet": "^4.0.0",
+    "@types/google-spreadsheet": "3.3.2",
     "@types/passport-jwt": "^3.0.9",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
@@ -41,7 +41,9 @@
     "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "google-spreadsheet": "^4.0.2",
+    "google-auth-library": "^9.0.0",
+    "google-spreadsheet": "3.3.0",
+    "install": "^0.13.0",
     "moment-timezone": "^0.5.43",
     "nestjs-telegraf": "^2.7.0",
     "passport": "^0.6.0",
